--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            </div>
         </div>
       </nav>
-      <!--banner-->
+      <!--banner start-->
       <div class="banner">
        <div  class="container box ">
         <div class="text-center text">
@@ -47,6 +47,7 @@
     </div>
        </div>
     </div>
+    <!--banner end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
